<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">
        <Button
                android:id="@+id/button_market_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/market_price"
                android:textAllCaps="true"
                android:layout_margin="16dp"
                style="@style/Widget.AppCompat.Button"/>

        <Button
                android:id="@+id/button_avg_block_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/avg_block_size"
                android:textAllCaps="true"
                android:layout_below="@id/button_market_price"
                android:layout_margin="16dp"
                style="@style/Widget.AppCompat.Button"/>


        <Button
                android:id="@+id/button_num_transactions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/num_transaction"
                android:textAllCaps="true"
                android:layout_below="@id/button_avg_block_size"
                android:layout_margin="16dp"
                style="@style/Widget.AppCompat.Button"/>

        <Button
                android:id="@+id/button_mem_pool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mem_pool"
                android:padding="20dp"
                android:textAllCaps="true"
                android:layout_below="@id/button_num_transactions"
                android:layout_margin="16dp"
                style="@style/Widget.AppCompat.Button"/>


    </RelativeLayout>
</RelativeLayout>